<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_settlements"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/rozliczenia" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_chat"
        android:title="@string/komunikaty" />

    <item
        android:id="@+id/navigation_voting"
        android:icon="@drawable/ic_ballot_black_24dp"
        android:title="@string/g_osowania" />

    <item
        android:id="@+id/navigation_faults"
        android:icon="@drawable/ic_warning_black_24dp"
        android:title="@string/usterki" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/wi_cej" />

</menu>