<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/main_blue"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/rector_logo"
        android:layout_width="132dp"
        android:layout_height="44dp"
        android:src="@drawable/rector_logo"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="47dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_apartment_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/rector_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        android:layout_marginTop="32dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        android:hint="@string/login"
        app:hintTextColor="@color/transparent"
        app:hintAnimationEnabled="false">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:textSize="24sp"
            android:drawablePadding="16dp"
            android:padding="8dp"
            android:inputType="text"
            android:textCursorDrawable="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_login"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        android:hint="@string/password"
        app:hintTextColor="@color/transparent"
        app:hintAnimationEnabled="false">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableEnd="@drawable/ic_icon_action_visibility_24px"
            android:textSize="24sp"
            android:drawablePadding="16dp"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:layout_marginTop="8dp"
        android:text="@string/remember_validation"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zaloguj"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cb_remember"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_red_button"
        android:letterSpacing="0.1"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/apator_copyrights"
        android:textColor="@color/white"
        android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>