<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settlements.SettlementsFragment"
    android:background="@color/background_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:paddingVertical="4dp"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_circle_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/avatar"/>

        <TextView
            android:id="@+id/tv_toolbar_header"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Witaj, Piotr"
            android:textColor="@color/main_blue"
            android:letterSpacing="0.1"
            android:fontFamily="@font/segoe_ui_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/iv_toolbar_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_messages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/iv_toolbar_messages"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleY="1.2"
            android:scaleX="1.2"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textColor="@color/warning_red"
            android:fontFamily="@font/segoe_ui_bold"
            app:layout_constraintTop_toTopOf="@id/iv_toolbar_messages"
            app:layout_constraintEnd_toEndOf="@id/iv_toolbar_messages"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_balance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/shape_rounded_tile_blue"
            android:layout_height="76dp"
            android:layout_width="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/iv_balance_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_apartment_black_24dp"
                android:contentDescription="@string/app_logo" />

            <TextView
                android:id="@+id/tv_balance_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zielona_g_ra_jerzego_waszczyka_9b"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_balance_logo"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:letterSpacing="0.1"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintStart_toEndOf="@id/iv_balance_logo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="228dp"
                android:layout_height="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/shape_rounded_tile_white"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo"
                    android:textColor="@color/default_gray"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/_406_20_pln"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/warning_red"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            app:layout_constraintTop_toBottomOf="@id/cl_balance"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_tile_white"
            android:hint="@string/wprowad_tekst"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:textColorHint="@color/greyed_out_text"
            android:drawableEnd="@drawable/ic_search"
            tools:ignore="Autofill"
            android:inputType="text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/cl_main"
        android:id="@+id/rv_settlement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>